--- a/scss/components/products/_hero.scss
+++ b/scss/components/products/_hero.scss
@@ -4,7 +4,7 @@
 	overflow: hidden;
 	position: relative;
 	height: 500px;
-    background-image: url('../../../img/products/banner_productos.jpg');
+    background-image: url('../img/products/banner_productos.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
