--- a/scss/components/products/_instalation.scss
+++ b/scss/components/products/_instalation.scss
@@ -17,7 +17,7 @@
         &__text{
             @include flex-center-center;
             flex-direction: column;
-            background-image: url('../../../img/products/ban_gale.jpg');
+            background-image: url('../img/products/ban_gale.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
