--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,6 +53,13 @@
 @import 'components/distibutor/rason';
 @import 'components/distibutor/start_win';
 
+//*contact
+@import 'components/contact/hero';
+@import 'components/contact/grid';
+@import 'components/contact/location';
+
+
+
 *{
 	margin: 0;
 	padding: 0;
