--- a/css/main.css
+++ b/css/main.css
@@ -2384,6 +2384,20 @@
       color: #F7C50A;
       font-weight: bold; }
 
+.hero_contact {
+  width: 100%;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  height: 500px;
+  background-image: url("../img/contact/banner-contact.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; }
+  @media (min-width: 1199px) {
+    .hero_contact {
+      height: 800px; } }
+
 * {
   margin: 0;
   padding: 0;
