--- a/css/main.css
+++ b/css/main.css
@@ -2403,15 +2403,42 @@
   width: 100%;
   overflow: hidden;
   position: relative;
-  background-color: #000000; }
+  background-color: #000000;
+  padding: 30px 0; }
+  @media (min-width: 1199px) {
+    .grid {
+      padding: 60px 0; } }
   .grid .container-sm {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); }
+    grid-template-columns: repeat(1, 1fr); }
+    @media (min-width: 1199px) {
+      .grid .container-sm {
+        grid-template-columns: repeat(3, 1fr); } }
   .grid__item {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column; }
+    .grid__item__imagen {
+      width: 100%; }
+      @media (min-width: 300px) {
+        .grid__item__imagen {
+          width: 250px; } }
+      .grid__item__imagen img {
+        border-radius: 10px; }
+    .grid__item p {
+      width: 100%;
+      color: #F7C50A;
+      font-size: 15px;
+      font-weight: bold;
+      text-align: center;
+      padding: 20px 0; }
+      @media (min-width: 1199px) {
+        .grid__item p {
+          font-size: 17px;
+          width: 50%;
+          text-align: center;
+          padding-top: 20px; } }
 
 * {
   margin: 0;
