--- a/scss/components/contact/_grid.scss
+++ b/scss/components/contact/_grid.scss
@@ -4,10 +4,19 @@
 	overflow: hidden;
 	position: relative;
     background-color: $black;
+    padding: 30px 0;
+
+    @media(min-width: 1199px){
+       padding: 60px 0;
+    }
 
     .container-sm{
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+
+        @media(min-width: 1199px){
+            grid-template-columns: repeat(3, 1fr);
+         }
     }
 
     &__item{
@@ -15,11 +24,32 @@
          flex-direction: column;
 
         &__imagen{
+            width: 100%;
 
+            @media(min-width: 300px){
+                width: 250px;
+            }
+
+            img{
+                border-radius: 10px;
+            }
         }
 
         p{
+            width: 100%;
+            color: $mikado_yellow;
+            font-size: 15px;
+            font-weight: bold;
+            text-align: center;
+            padding: 20px 0;
             
+            @media(min-width: 1199px){
+                font-size: 17px;
+                width: 50%;
+                text-align: center;
+                padding-top: 20px;
+            }
+
         }
     }
 }
