--- a/scss/components/contact/_location.scss
+++ b/scss/components/contact/_location.scss
@@ -1,3 +1,68 @@
-.location_contact{
-    
+.contact{
+    width: 100%;
+    width: 100%;
+	overflow: hidden;
+	position: relative;
+    padding: 30px 0;
+    background-image: url('../img/contact/ban-contactanos.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    @media(min-width: 1199px){
+       padding: 60px 0;
+    }
+
+    .container-sm{
+        @include flex-center-center;
+        flex-direction: column;
+    }
+
+
+    &__location{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+
+        @media(min-width: 1199px){
+            grid-template-columns: repeat(2, 1fr);
+         }
+
+
+         &__map{
+            width: 100%;
+         }
+
+         &__text{
+            h1{
+                width: 100%;
+                font-weight: 600;
+                font-size: 25px;
+                color: $mikado_yellow;
+                text-align: start;
+                padding-bottom: 20px;
+                margin: 0;
+        
+                @media(min-width:768px){
+                    font-size: 35px;
+                }
+            }
+
+            &__information{
+                @include flex-center-center;
+
+                &__icon{
+                    width: 30px;
+                }
+
+                p{
+
+                }
+            }
+
+         }
+    }
+
+    &__for{
+
+    }
 }
