--- a/scss/components/contact/_location.scss
+++ b/scss/components/contact/_location.scss
@@ -29,40 +29,165 @@
 
 
          &__map{
-            width: 100%;
+            width: 80%;
+            margin: auto;
+
+            @media(min-width: 1199px){
+                width: 100%;
+             }
          }
 
          &__text{
+            width: 80%;
+            margin: auto;
+            padding-top: 30px;
+
+            @media(min-width: 1199px){
+                width: 70%;
+                padding-top: 0;
+            }
+
+
             h1{
                 width: 100%;
                 font-weight: 600;
                 font-size: 25px;
                 color: $mikado_yellow;
-                text-align: start;
-                padding-bottom: 20px;
+                text-align: center;
                 margin: 0;
         
                 @media(min-width:768px){
                     font-size: 35px;
+                    padding-bottom: 20px;
+                    text-align: start;
                 }
             }
 
             &__information{
-                @include flex-center-center;
+                @include flex-a-center;
+                gap: 15px;
+                padding-top: 20px;
 
                 &__icon{
                     width: 30px;
                 }
 
                 p{
-
+                    color: $white;
+                    line-height: 26px;
+                    letter-spacing: 0.3px;
+                    text-align: start;
+                    font-size: 15px;
+        
+                    @media(min-width:768px){
+                        font-size: 22px;
+                    }
                 }
             }
 
          }
     }
 
-    &__for{
+    h1.title{
+        font-weight: 600;
+        font-size: 25px;
+        color: $mikado_yellow;
+        text-shadow: 2px 2px 5px black;
+        text-align: center;
+        text-transform: uppercase;
+        padding-bottom: 30px;
+
+        @media(min-width:768px){
+            font-size: 48px;
+            padding: 90px 0;
+        }
+    } 
+
+    &__contact{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+
+        @media(min-width: 1199px){
+            grid-template-columns: repeat(2, 1fr);
+         }
+
+         &__form{
+
+            h1{
+                font-weight: 600;
+                font-size: 20px;
+                color: $mikado_yellow;
+        
+                @media(min-width:768px){
+                    font-size: 28px;
+                }
+            }
+
+            p{
+                color: $white;
+                line-height: 26px;
+                letter-spacing: 0.3px;
+                text-align: start;
+                font-size: 15px;
+    
+                @media(min-width:768px){
+                    font-size: 17px;
+                    padding-bottom: 30px;
+                }
+            }
+
+            input, textarea{
+                width: 100%;
+                padding: 10px;
+                border-radius: 10px;
+                border: 1px solid $la_salle_green;
+                margin-bottom: 15px;
+            }
+
+            textarea{
+                height: 200px;
+            }
+
+            input[type=checkbox] {
+                width: auto;
+                margin-bottom: 0;
+                border: 1px solid $mikado_yellow;
+            }
+
+            &__button{
+                @include flex-center-center;
+                background-color: $mikado_yellow;
+                /*text*/
+                font-size: 14px;
+                font-weight: 800;
+                margin-top: 17px;
+                letter-spacing: 0.5px;
+                padding: 12px 23px;
+                color: $white;
+        
+                @media(min-width:768px){
+                    font-size: 20px;
+                }
+        
+                &:hover{
+                    color: $white;
+                    background-color:$black ;
+                    border: 1px solid $mikado_yellow;
+                }
+            }
+
+            &__checkbox{
+                @include flex-a-center;
+                gap: 10px;
+            }
+
+         }
+
+         &__imagen{
+            width: 503px;
+            margin: auto;
+
+         }
 
     }
 }
