--- a/scss/components/contact/_location.scss
+++ b/scss/components/contact/_location.scss
@@ -95,7 +95,7 @@
         text-shadow: 2px 2px 5px black;
         text-align: center;
         text-transform: uppercase;
-        padding-bottom: 30px;
+        padding: 30px 0;
 
         @media(min-width:768px){
             font-size: 48px;
@@ -117,22 +117,24 @@
                 font-weight: 600;
                 font-size: 20px;
                 color: $mikado_yellow;
+                text-align: center;
         
                 @media(min-width:768px){
                     font-size: 28px;
+                    text-align: start;
                 }
             }
 
             p{
                 color: $white;
-                line-height: 26px;
                 letter-spacing: 0.3px;
-                text-align: start;
-                font-size: 15px;
+                text-align: center;
+                font-size: 12px;
+                padding-bottom: 30px;
     
                 @media(min-width:768px){
                     font-size: 17px;
-                    padding-bottom: 30px;
+                    text-align: start;
                 }
             }
 
@@ -164,9 +166,11 @@
                 letter-spacing: 0.5px;
                 padding: 12px 23px;
                 color: $white;
-        
+                margin: auto;
+
                 @media(min-width:768px){
                     font-size: 20px;
+                    margin: 0;
                 }
         
                 &:hover{
@@ -179,13 +183,20 @@
             &__checkbox{
                 @include flex-a-center;
                 gap: 10px;
+                padding-bottom: 10px;
             }
 
          }
 
          &__imagen{
-            width: 503px;
+            width: 80%;
             margin: auto;
+            padding-top: 30px;
+
+            @media(min-width: 1199px){
+                width: 503px;
+                padding: 0;
+            }
 
          }
 
