--- a/css/main.css
+++ b/css/main.css
@@ -2563,11 +2563,95 @@
       max-width: 471px;
       display: none;
       justify-content: flex-start;
-      padding: 5px 0 25px 0;
+      padding: 5px 0;
       text-align: start;
       font-size: 12px;
       color: red; }
       .contact__contact__form__input_name__error--active {
+        display: flex; }
+    .contact__contact__form__input_email--active input {
+      border: 1px solid red;
+      margin-bottom: 0; }
+    .contact__contact__form__input_email__error {
+      width: 100%;
+      max-width: 471px;
+      display: none;
+      justify-content: flex-start;
+      padding: 5px 0;
+      text-align: start;
+      font-size: 12px;
+      color: red; }
+      .contact__contact__form__input_email__error--active {
+        display: flex; }
+    .contact__contact__form__input_phone--active input {
+      border: 1px solid red;
+      margin-bottom: 0; }
+    .contact__contact__form__input_phone__error {
+      width: 100%;
+      max-width: 471px;
+      display: none;
+      justify-content: flex-start;
+      padding: 5px 0;
+      text-align: start;
+      font-size: 12px;
+      color: red; }
+      .contact__contact__form__input_phone__error--active {
+        display: flex; }
+    .contact__contact__form__input_direction--active input {
+      border: 1px solid red;
+      margin-bottom: 0; }
+    .contact__contact__form__input_direction__error {
+      width: 100%;
+      max-width: 471px;
+      display: none;
+      justify-content: flex-start;
+      padding: 5px 0;
+      text-align: start;
+      font-size: 12px;
+      color: red; }
+      .contact__contact__form__input_direction__error--active {
+        display: flex; }
+    .contact__contact__form__input_nombre_cfe--active input {
+      border: 1px solid red;
+      margin-bottom: 0; }
+    .contact__contact__form__input_nombre_cfe__error {
+      width: 100%;
+      max-width: 471px;
+      display: none;
+      justify-content: flex-start;
+      padding: 5px 0;
+      text-align: start;
+      font-size: 12px;
+      color: red; }
+      .contact__contact__form__input_nombre_cfe__error--active {
+        display: flex; }
+    .contact__contact__form__input_number_cfe--active input {
+      border: 1px solid red;
+      margin-bottom: 0; }
+    .contact__contact__form__input_number_cfe__error {
+      width: 100%;
+      max-width: 471px;
+      display: none;
+      justify-content: flex-start;
+      padding: 5px 0;
+      text-align: start;
+      font-size: 12px;
+      color: red; }
+      .contact__contact__form__input_number_cfe__error--active {
+        display: flex; }
+    .contact__contact__form__textarea--active textarea {
+      border: 1px solid red;
+      margin-bottom: 0; }
+    .contact__contact__form__textarea__error {
+      width: 100%;
+      max-width: 471px;
+      display: none;
+      justify-content: flex-start;
+      padding: 5px 0;
+      text-align: start;
+      font-size: 12px;
+      color: red; }
+      .contact__contact__form__textarea__error--active {
         display: flex; }
     .contact__contact__form__button {
       display: flex;
