--- a/scss/components/contact/_location.scss
+++ b/scss/components/contact/_location.scss
@@ -171,7 +171,169 @@
                     max-width: 471px;
                     display: none;
                     justify-content: flex-start;
-                    padding: 5px 0 25px 0 ;
+                    padding: 5px 0;
+                    text-align: start;
+                    font-size: 12px;                      
+                    color: red;
+            
+                    &--active{
+                        display: flex;
+                        
+                    }
+                }
+            }
+
+            &__input_email{
+                
+                &--active{
+                    input{
+                        border: 1px solid red;
+                        margin-bottom: 0;
+                    }
+                    
+                }
+
+                &__error{
+                    width: 100%;
+                    max-width: 471px;
+                    display: none;
+                    justify-content: flex-start;
+                    padding: 5px 0;
+                    text-align: start;
+                    font-size: 12px;                      
+                    color: red;
+            
+                    &--active{
+                        display: flex;
+                        
+                    }
+                }
+            }
+
+            &__input_phone{
+                
+                &--active{
+                    input{
+                        border: 1px solid red;
+                        margin-bottom: 0;
+                    }
+                    
+                }
+
+                &__error{
+                    width: 100%;
+                    max-width: 471px;
+                    display: none;
+                    justify-content: flex-start;
+                    padding: 5px 0;
+                    text-align: start;
+                    font-size: 12px;                      
+                    color: red;
+            
+                    &--active{
+                        display: flex;
+                        
+                    }
+                }
+            }
+
+            &__input_direction{
+                
+                &--active{
+                    input{
+                        border: 1px solid red;
+                        margin-bottom: 0;
+                    }
+                    
+                }
+
+                &__error{
+                    width: 100%;
+                    max-width: 471px;
+                    display: none;
+                    justify-content: flex-start;
+                    padding: 5px 0;
+                    text-align: start;
+                    font-size: 12px;                      
+                    color: red;
+            
+                    &--active{
+                        display: flex;
+                        
+                    }
+                }
+            }
+
+            &__input_nombre_cfe{
+                
+                &--active{
+                    input{
+                        border: 1px solid red;
+                        margin-bottom: 0;
+                    }
+                    
+                }
+
+                &__error{
+                    width: 100%;
+                    max-width: 471px;
+                    display: none;
+                    justify-content: flex-start;
+                    padding: 5px 0;
+                    text-align: start;
+                    font-size: 12px;                      
+                    color: red;
+            
+                    &--active{
+                        display: flex;
+                        
+                    }
+                }
+            }
+
+            &__input_number_cfe{
+                
+                &--active{
+                    input{
+                        border: 1px solid red;
+                        margin-bottom: 0;
+                    }
+                    
+                }
+
+                &__error{
+                    width: 100%;
+                    max-width: 471px;
+                    display: none;
+                    justify-content: flex-start;
+                    padding: 5px 0;
+                    text-align: start;
+                    font-size: 12px;                      
+                    color: red;
+            
+                    &--active{
+                        display: flex;
+                        
+                    }
+                }
+            }
+
+            &__textarea{
+                
+                &--active{
+                    textarea{
+                        border: 1px solid red;
+                        margin-bottom: 0;
+                    }
+                    
+                }
+
+                &__error{
+                    width: 100%;
+                    max-width: 471px;
+                    display: none;
+                    justify-content: flex-start;
+                    padding: 5px 0;
                     text-align: start;
                     font-size: 12px;                      
                     color: red;
