--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,6 +21,7 @@
 @import 'components/home/idea';
 @import 'components/home/our_products';
 @import 'components/home/sales';
+@import 'components/home/thanks';
 
 //*nosotros
 @import 'components/us/hero';
