--- a/css/main.css
+++ b/css/main.css
@@ -1060,6 +1060,34 @@
         background-color: #000000;
         border: 1px solid #F7C50A; }
 
+.thanks {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  height: 100vh;
+  background-color: #000000;
+  padding-top: 120px; }
+  .thanks .container-sm {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    height: 100%; }
+  .thanks h1 {
+    width: 100%;
+    font-size: 30px;
+    color: #1B8233;
+    text-transform: uppercase;
+    text-align: center; }
+    @media (min-width: 992px) {
+      .thanks h1 {
+        font-size: 48px;
+        line-height: 56px; } }
+  .thanks__imagen {
+    margin-top: 110px;
+    width: 100%; }
+    .thanks__imagen img {
+      width: 100%; }
+
 .hero_us {
   width: 100%;
   width: 100%;
