--- a/scss/components/home/_reduces_costs.scss
+++ b/scss/components/home/_reduces_costs.scss
@@ -3,6 +3,11 @@
 	position: relative;
     background-color: $black;
     z-index: 1;
+    padding: 30px 0;
+
+    @media(min-width:1199px){
+        padding: 50px 0;
+    }
 
     .container-sm{
         @include flex-center-center;
