--- a/scss/components/home/_win_win.scss
+++ b/scss/components/home/_win_win.scss
@@ -5,11 +5,9 @@
     .container-sm{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        padding: 15px;
         gap: 40px;
 
         @media(min-width: 1199px){
-            padding: 15px 0;
             grid-template-columns: repeat(2, 1fr);
         }
     }
@@ -17,19 +15,32 @@
     &__text{
         @include flex-center-center;
         flex-direction: column;
+        padding: 30px 0;
+
+        @media(min-width: 1199px){
+            padding: 50px 0;
+            grid-template-columns: repeat(2, 1fr);
+        }
 
         h1{
             color: #1b8233;
             text-align: center;
             font-weight: 900;
-            font-size: 25px;
+            font-size: 20px;
             margin-bottom: 15px;
             text-transform: uppercase;
 
-            @media(min-width:768px){
-                font-size: 30px;
+            @media(min-width:1199px){
+                font-size: 25px;
                 margin-bottom: 30px;
             }
+
+            @media(min-width:1400px){
+                font-size: 30px;
+            }
+
+
+
         }
 
         h2{
@@ -39,7 +50,7 @@
             color: #272727;
             margin-bottom: 15px;
 
-            @media(min-width:768px){
+            @media(min-width:1199px){
                 font-size: 20px;  
                 margin-bottom: 30px;
             }
@@ -53,7 +64,7 @@
             font-size: 15px;
             margin-bottom: 10px;
 
-            @media(min-width:768px){
+            @media(min-width:1199px){
                 font-size: 17px;
                 margin-bottom: 20px;
             }
@@ -64,10 +75,9 @@
             font-size: 15px;
             font-weight: 700;
             text-align: center;
-          
             margin: 8px 0;
 
-            @media(min-width:768px){
+            @media(min-width:1199px){
                 font-size: 21px;
                 margin: 10px 0;
             }
@@ -104,11 +114,11 @@
 
         @media(min-width: 1199px){
             position: relative;
-            bottom: 48px;
+            bottom: 120px;
         }
 
         @media(min-width: 1399px){
-            bottom: 36px;
+            bottom: 70px;
         }
 
         @media(min-width: 1677px){
