--- a/scss/components/home/_hero.scss
+++ b/scss/components/home/_hero.scss
@@ -1,14 +1,10 @@
 .hero{
 	width: 100%;
-	overflow: hidden;
+    overflow: hidden;
 	position: relative;
 	height: 500px;
 
-    @media(min-width: 1199px){
-        height: 800px;
-    }
-
-	&--prev{
+    &--prev{
 		position: absolute;
         left: 15px;
 		top: 50%;
@@ -45,20 +41,21 @@
 	}
 
     &__form{
-        width: 100%;
-        height: 100%;
 
+     
         &--one{
+            width: 100%;
+            height: 100%;
             background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('../img/home/Banner.jpg');
-            background-position: center;
-            background-size: cover;
+            background-position:center;
+            background-size:cover;
             background-repeat: no-repeat;
+            @include flex-center-center ; 
+            flex-direction: column;
 
             .container-sm{
                 @include flex-center-center ;
                 flex-direction: column;
-                padding: 200px 0;
-
                 @media(min-width: 1199px){
                     @include flex-end-start ; 
                 }
@@ -76,6 +73,7 @@
                     width: 100%;
                     font-size: 30px;
                     color: $mikado_yellow;
+                    text-shadow: 2px 2px 5px black;
                     text-transform: uppercase;
     
                     @media(min-width: 992px){
@@ -125,15 +123,19 @@
         }
 
         &--two{
+            width: 100%;
+            height: 100%;
             background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('../img/home/Hotel.jpg');
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
+            @include flex-center-center ; 
+            flex-direction: column;
+
 
             .container-sm{
                 @include flex-center-center ; 
                 flex-direction: column;
-                padding: 200px 0;
 
                 @media(min-width: 1199px){
                     @include flex-start-start ;
@@ -154,6 +156,7 @@
                     color: $mikado_yellow;
                     text-align: center;
                     text-transform: uppercase;
+                    text-shadow: 2px 2px 5px black;
     
                     @media(min-width: 992px){
                         text-align: start;
@@ -201,6 +204,7 @@
                 }
             }
         }
+        
         
     }
 }
