--- a/scss/components/home/_promotion.scss
+++ b/scss/components/home/_promotion.scss
@@ -7,25 +7,31 @@
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    height: 500px;
+    height: 350px;
+    padding: 30px 0;
+
+    @media(min-width: 1199px){
+        padding: 50px 0;
+    }
+    
 
     .container-sm{
         height: 100%;
         @include flex-center-center;
         flex-direction: column;
-        padding: 60px 0;
+    
     }
 
     h1{
         font-weight: 600;
-        font-size: 30px;
+        font-size: 20px;
         color: white;
         text-shadow: 2px 2px 5px black;
         text-align: center;
         text-transform: uppercase;
 
         @media(min-width:768px){
-            font-size: 48px;
+            font-size: 30px;
         }
     }
 
@@ -36,7 +42,7 @@
         text-shadow: 2px 2px 5px black;
         text-align: center;
         font-size:15px ;
-        margin-top: 20px;
+        margin-top: 15px;
 
         @media(min-width:768px){
             width: 50%;
