--- a/scss/components/home/_reduces_costs.scss
+++ b/scss/components/home/_reduces_costs.scss
@@ -3,10 +3,10 @@
 	position: relative;
     background-color: $black;
     z-index: 1;
-    padding: 30px 0;
+    padding: 0px 0 30px 0;
 
     @media(min-width:1199px){
-        padding: 50px 0;
+        padding: 0px 0 50px 0;
     }
 
     .container-sm{
