--- a/scss/components/home/_sales.scss
+++ b/scss/components/home/_sales.scss
@@ -1,16 +1,22 @@
 .sale{
     width: 100%;
     position: relative;
+    padding-bottom: 50px;
+
+    @media(min-width:1199px){
+        padding-bottom: 30px;
+    }
 
     .container-sm{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         padding: 15px;
-        gap: 40px;
+        gap: 30px;
 
         @media(min-width: 1199px){
             padding: 0;
             grid-template-columns: repeat(2, 1fr);
+            gap: 40px;
         }
     }
 
@@ -39,15 +45,14 @@
         flex-direction: column;
 
         @media(min-width: 1199px){
-          padding-top: 64px;
+          padding-top: 50px;
         }
 
         h1{
             color: #1b8233;
             text-align: center;
             font-weight: 900;
-            font-size: 25px;
-          
+            font-size: 20px;
             margin-bottom: 10px;
             text-transform: uppercase;
 
