--- a/scss/components/home/_win_win.scss
+++ b/scss/components/home/_win_win.scss
@@ -5,17 +5,18 @@
     .container-sm{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        gap: 40px;
+        gap: 20px;
 
         @media(min-width: 1199px){
             grid-template-columns: repeat(2, 1fr);
+            gap: 40px;
         }
     }
 
     &__text{
         @include flex-center-center;
         flex-direction: column;
-        padding: 30px 0;
+        padding: 30px 0 0 0;
 
         @media(min-width: 1199px){
             padding: 50px 0;
@@ -32,7 +33,6 @@
 
             @media(min-width:1199px){
                 font-size: 25px;
-                margin-bottom: 30px;
             }
 
             @media(min-width:1400px){
@@ -52,7 +52,6 @@
 
             @media(min-width:1199px){
                 font-size: 20px;  
-                margin-bottom: 30px;
             }
         }
 
@@ -66,20 +65,17 @@
 
             @media(min-width:1199px){
                 font-size: 17px;
-                margin-bottom: 20px;
             }
         }
 
         h4{
             color: #1b8233;
-            font-size: 15px;
+            font-size: 17px;
             font-weight: 700;
             text-align: center;
-            margin: 8px 0;
 
             @media(min-width:1199px){
-                font-size: 21px;
-                margin: 10px 0;
+                font-size: 20px;
             }
         }
 
